# tokkatot

./: .gitignore  BUILTIN_WIFI_ACCESS_POINT.md  DEPLOYMENT.md  FIXES_COMPLETED.md  FIXES_REQUIRED.md  OFFLINE_SETUP_GUIDE.md  PROJECT_ANALYSIS.md  QUICKSTART.md  RASPBERRY_PI_QUICKSTART.md  TROUBLESHOOTING_DEPLOYMENT.md  VIRTUALBOX_SETUP.md  controller  generate-cert.sh  setup-ai-service.sh  users.db
.github/workflows/: main.yml
ai-service/: app.py  requirements.txt
css/: notifications.css  styleSettings.css  stylenavbar.css  stylesDashboard.css
dummy_server/: dummyServer.js  package-lock.json
embedded/: CMakeLists.txt  generate-cert.sh  sdkconfig
embedded/main/: CMakeLists.txt  idf_component.yml
embedded/main/include/: adc.h  device_control.h  sensor_manager.h  server_handlers.h  wifi_manager.h
embedded/main/src/: adc.c  device_control.c  main.c  sensor_manager.c  server_handlers.c  wifi_manager.c
frontend/: .gitignore  README.md  connection-test.html  manifest.json  sw.js  test-chart-offline.html
frontend/ai-service/: AI_FEATURE_README.md
frontend/components/: 404.html  header.html  navbar.html
frontend/css/: critical.css  loginRegisPage.css  loginSignUp.css  styleDiseaseDetection.css  (+6 more)
js/: index.js  login.js  notifications.js  scriptDashboard.js  scriptHome.js
middleware/: .env.example  backend  go.mod  go.sum  main.go  test.http  users.db
pages/: dashboard.html  disease-detection.html  login.html  settings.html  signup.html
scripts/: deploy-all.sh  setup-access-point.sh  setup-github-runner.sh  setup-middleware-service.sh  verify-system.sh
(+58 files in other folders)
