idf_component_register(
    SRCS 
        "src/main.c"
        "src/adc.c"
        "src/sensor_manager.c"
        "src/device_control.c"
        "src/server_handlers.c"
        "src/wifi_manager.c"
    INCLUDE_DIRS 
        "include"
    REQUIRES 
        "esp_https_server"
        "esp_wifi"
        "esp_timer"
        "nvs_flash"
        "driver"
        "json"
        "esp_adc"
        "dht"
    EMBED_TXTFILES  "certs/cert.pem"
                    "certs/key.pem"
)
